@@ -1,3 +1,7 @@
+2005-11-04  Russell Bryant  <russell@digium.com>
+
+	* channels/chan_iax2.c: Create a function that stores a peer's status in a given buffer.  Use this function in "iax2 show peers" and "iax2 show peer <peername>".  Also, add the peer's status as an option to the IAXPEER dialplan function.
+
 2005-11-04  Kevin P. Fleming  <kpfleming@digium.com>
 
 	* include/asterisk/compiler.h: don't try to use always_inline on old compilers
